@@ -117,6 +117,9 @@ Trunk (unreleased changes)
  37. HADOOP-1467.  Remove redundant counters from WordCount example.
      (Owen O'Malley via tomwhite)
 
+ 38. HADOOP-1139.  Log HDFS block transitions at INFO level, to better
+     enable diagnosis of problems.  (Dhruba Borthakur via tomwhite)
+
 
 Release 0.13.0 - 2007-06-08
 
